<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/body_textsize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_auth_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/body_textsize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <Button
            android:id="@+id/bt_auth_log_in"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_selector"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/body_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/content4"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <TextView
            android:id="@+id/tv_auth_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/body_textsize"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>