<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/header_textsize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/content1"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reg1_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_reg1_username_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/textFalse"
                android:textSize="@dimen/body_textsize"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_reg1_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_username_hint"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reg1_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_reg1_password_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/textFalse"
                android:textSize="@dimen/body_textsize"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_reg1_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reg1_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/confirm_password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_reg1_confirm_password_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/textFalse"
                android:textSize="@dimen/body_textsize"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_reg1_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <Button
            android:id="@+id/bt_reg1_create"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_selector"
            android:padding="10dp"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/body_textsize" />
    </LinearLayout>
</ScrollView>