<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/content2"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/body_textsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/body_textsize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_reg2_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:labelFor="@id/et_reg2_phone_code"
                android:maxLength="4"
                android:text="@string/ina_code"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/body_textsize" />

            <EditText
                android:id="@+id/et_reg2_phone_number"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/body_textsize" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_reg2_send_code"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_selector"
            android:padding="10dp"
            android:text="@string/send_code"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/body_textsize" />

        <ProgressBar
            android:id="@+id/pb_reg2"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="7dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>